--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -15,31 +15,31 @@
 
 			<div>
 				社員コード(<span>※</span>): <input type="text" name="staff_code"
-					th:field="*{staff_code}" readonly> <input type="hidden"
+					th:field="*{staff_code}" class="formbox" readonly> <input type="hidden"
 					name="staff_code_before" th:value="${staff_code}">
 			</div>
 
 			<div>
 				姓(<span>※</span>): <input type="text" name="last_name"
-					th:field="*{last_name}" readonly>
+					th:field="*{last_name}" class="formbox" readonly>
 			</div>
 
 			<div>
 				名(<span>※</span>): <input type="text" name="first_name"
-					th:field="*{first_name}" readonly>
+					th:field="*{first_name}" class="formbox" readonly>
 				<div></div>
 				姓 ローマ字(<span>※</span>): <input type="text" name="last_name_romaji"
-					th:field="*{last_name_romaji}" readonly>
+					th:field="*{last_name_romaji}" class="formbox" readonly>
 			</div>
 
 			<div>
 				名 ローマ字(<span>※</span>): <input type="text" name="first_name_romaji"
-					th:field="*{first_name_romaji}" readonly>
+					th:field="*{first_name_romaji}" class="formbox" readonly>
 			</div>
 
 			<div>
 				所属(<span>※</span>): <select name="staff_department" size="1"
-					th:field="*{staff_department}" class="disabled" tabindex="-1">
+					th:field="*{staff_department}" class="disabled2" tabindex="-1">
 					<option value="">3つの選択肢を表示</option>
 					<option value="0001">エンジニア</option>
 					<option value="0002">営業</option>
@@ -47,9 +47,9 @@
 				</select>
 			</div>
 
-			<div>
+			<div class=radioBox>
 				経歴(<span>※</span>): <input type="radio" name="new_glad_flg"
-					value="true" th:field="*{new_glad_flg}" class="disabled1"
+					value="true" th:field="*{new_glad_flg}" class=disabled3
 					tabindex="-1">新卒 <input type="radio" name="new_glad_flg"
 					value="false" th:field="*{new_glad_flg}" class="disabled1"
 					tabindex="-1">中途
@@ -57,7 +57,7 @@
 
 			<div>
 				入社年月日(<span>※</span>): <input type="text" name="joined_year"
-					th:field="*{joined_year}" readonly>
+					th:field="*{joined_year}" class="formbox" readonly>
 			</div>
 
 			<div>
