--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -10,52 +10,56 @@
 		<div class="toptitle">新規情報管理</div>
 
 		<div class="engineer">
-			<form action="new">
+			<form action="new" th:object="${user}">
 				<input type="submit" value="新規登録" class="staffbtnnew">
 			</form>
-			<form action="home">
-				<input type="submit" value="戻る" class="staffbtn">
-			</form>
-			<div class="subtitle">エンジニア</div>
+			<div class="subtitle">社員情報</div>
 		</div>
 	</div>
 
 	<table border="1" style="border-collapse: collapse;">
-		<thead style="display: inline-block;">
+		<thead style="display: block;">
 			<tr>
-				<th style="width: 27.46px;">No</th>
-				<th style="width: 82px;">社員コード</th>
-				<th style="width: 75px;">姓 名</th>
-				<th style="width: 140px;">姓名 ローマ字</th>
-				<th style="width: 110px;">入社年月日</th>
-				<th style="width: 50px;">編集</th>
-				<th style="width: 50px;">削除</th>
+				<th style="width: 50px; font-weight: normal;">No</th>
+				<th style="width: 125px; font-weight: normal;">社員コード</th>
+				<th style="width: 145px; font-weight: normal;">姓 名</th>
+				<th style="width: 145px; font-weight: normal;">姓名 ローマ字</th>
+				<th style="width: 165px; font-weight: normal;">入社年月日</th>
+				<th style="width: 90px; font-weight: normal;">編集</th>
+				<th style="width: 90px; font-weight: normal;">削除</th>
 			</tr>
 		</thead>
 
-		<tbody style="display: inline-block;">
+		<tbody style="display: block;">
 			<tr th:each="user ,stat : ${userList}" th:object="${user}"
 				class="align-middle">
-				<td style="width: 27.46px;" th:text="${stat.count}"></td>
-				<td style="width: 82.2px;" th:text="*{staff_code}"></td>
-				<td style="width: 75px;" th:text="*{last_name} + ' '+ *{first_name}"></td>
-				<td style="width: 140.2px;"
-					th:text="*{last_name_romaji} + ' '+ *{first_name_romaji}"></td>
-				<td style="width: 110px;" th:text="*{joined_year}"></td>
-				<td style="width: 50.1px;">
+				<th style="width: 50px; font-weight: normal;"
+					th:text="${stat.count}"></th>
+				<th style="width: 125px; font-weight: normal;"
+					th:text="*{staff_code}"></th>
+				<th style="width: 145px; font-weight: normal;"
+					th:text="*{last_name} + ' '+ *{first_name}"></th>
+				<th style="width: 145px; font-weight: normal;"
+					th:text="*{last_name_romaji} + ' '+ *{first_name_romaji}"></th>
+				<th style="width: 165px; font-weight: normal;"
+					th:text="*{joined_year}"></th>
+				<th style="width: 90px; font-weight: normal;">
 					<form th:action="@{'/edit/' + ${user.staff_code}}" method="get">
-						<input type="submit" value="更新">
+						<input type="submit" value="更新" class=editbtn>
 					</form>
-				</td>
-				<td style="width: 50px;">
+				</th>
+				<th style="width: 90px; font-weight: normal;">
 					<form th:action="@{'/delete/' + ${user.staff_code}}" method="get">
-						<input type="submit" value="削除">
+						<input type="submit" value="削除" class=editbtn>
 					</form>
-				</td>
+				</th>
 			</tr>
 		</tbody>
 
 	</table>
+	<form action="home">
+		<input type="submit" value="戻る" class="listBackHomebtn">
+	</form>
 
 </body>
 </html>
