--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -69,8 +69,8 @@
 
 			<div class=radioBox>
 				経歴(<span>※</span>): <input type="radio" name="new_glad_flg"
-					value="true" checked th:text="新卒" th:field="*{new_glad_flg}">
-				<input type="radio" name="new_glad_flg" value="false" th:text="中途"
+					value="false" checked th:text="新卒" th:field="*{new_glad_flg}">
+				<input type="radio" name="new_glad_flg" value="true" th:text="中途"
 					class=radio th:field="*{new_glad_flg}">
 			</div>
 
