--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -17,46 +17,50 @@
 		</div>
 	</div>
 
-	<table border="1" style="border-collapse: collapse;">
-		<thead style="display: block;">
-			<tr>
-				<th style="width: 50px; font-weight: normal;">No</th>
-				<th style="width: 125px; font-weight: normal;">社員コード</th>
-				<th style="width: 145px; font-weight: normal;">姓 名</th>
-				<th style="width: 145px; font-weight: normal;">姓名 ローマ字</th>
-				<th style="width: 165px; font-weight: normal;">入社年月日</th>
-				<th style="width: 90px; font-weight: normal;">編集</th>
-				<th style="width: 90px; font-weight: normal;">削除</th>
-			</tr>
-		</thead>
+	<div th:if="${userList == null}">社員情報はありません</div>
 
-		<tbody style="display: block;">
-			<tr th:each="user ,stat : ${userList}" th:object="${user}"
-				class="align-middle">
-				<th style="width: 50px; font-weight: normal;"
-					th:text="${stat.count}"></th>
-				<th style="width: 125px; font-weight: normal;"
-					th:text="*{staff_code}"></th>
-				<th style="width: 145px; font-weight: normal;"
-					th:text="*{last_name} + ' '+ *{first_name}"></th>
-				<th style="width: 145px; font-weight: normal;"
-					th:text="*{last_name_romaji} + ' '+ *{first_name_romaji}"></th>
-				<th style="width: 165px; font-weight: normal;"
-					th:text="*{joined_year}"></th>
-				<th style="width: 90px; font-weight: normal;">
-					<form th:action="@{'/edit/' + ${user.staff_code}}" method="get">
-						<input type="submit" value="更新" class=editbtn>
-					</form>
-				</th>
-				<th style="width: 90px; font-weight: normal;">
-					<form th:action="@{'/delete/' + ${user.staff_code}}" method="get">
-						<input type="submit" value="削除" class=editbtn>
-					</form>
-				</th>
-			</tr>
-		</tbody>
 
-	</table>
+	<div th:if="${userList ne null}">
+		<table border="1" style="border-collapse: collapse;" >
+			<thead style="display: block; box-sizing: border-box;">
+				<tr>
+					<th style="width: 55px; font-weight: normal;">No</th>
+					<th style="width: 130px; font-weight: normal;">社員コード</th>
+					<th style="width: 150px; font-weight: normal;">姓 名</th>
+					<th style="width: 130px; font-weight: normal;">姓名 ローマ字</th>
+					<th style="width: 105px; font-weight: normal;">入社年月日</th>
+					<th style="width: 90px; font-weight: normal;">編集</th>
+					<th style="width: 90px; font-weight: normal;">削除</th>
+				</tr>
+			</thead>
+
+			<tbody style="display: inline-block; ">
+				<tr th:each="user ,stat : ${userList}" th:object="${user}" class="align-middle">
+					<th style="width: 55px; font-weight: normal;"
+						th:text="${stat.count}"></th>
+					<th style="width: 130px; font-weight: normal;"
+						th:text="*{staff_code}"></th>
+					<th style="width: 150px; font-weight: normal;"
+						th:text="*{last_name} + ' '+ *{first_name}"></th>
+					<th style="width: 130px; font-weight: normal;"
+						th:text="*{last_name_romaji} + ' '+ *{first_name_romaji}" class="nameP"></th>
+					<th style="width: 105px; font-weight: normal;"
+						th:text="*{joined_year}"></th>
+					<th style="width: 90px; font-weight: normal;">
+						<form th:action="@{'/edit/' + ${user.staff_code}}" method="get">
+							<input type="submit" value="更新" class="editbtn">
+						</form>
+					</th>
+					<th style="width: 90px; font-weight: normal;">
+						<form th:action="@{'/delete/' + ${user.staff_code}}" method="get">
+							<input type="submit" value="削除" class="editbtn">
+						</form>
+					</th>
+				</tr>
+			</tbody>
+
+		</table>
+	</div>
 	<form action="home">
 		<input type="submit" value="戻る" class="listBackHomebtn">
 	</form>
