--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -32,7 +32,7 @@
 				</tr>
 			</thead>
 
-			<tbody style="display: block;">
+			<tbody style="display: inline-block;">
 				<tr th:each="engineerList ,stat : ${engineerMembers}"
 					th:object="${engineerList}" class="align-middle">
 					<th style="width: 55px; font-weight: normal;"
@@ -45,12 +45,12 @@
 						th:if="*{new_glad_flg == false}" th:text="新卒"></th>
 					<th style="width: 105px; font-weight: normal;"
 						th:if="*{new_glad_flg == true}" th:text="中途"></th>
-					<th style="width: 225px; font-weight: normal;"
-						th:if="${#strings.isEmpty(project_type)}" th:text="*{project_type}"
-						class="textp">-</th>
-					<th style="width: 225px; font-weight: normal;"
-						th:if="${!#strings.isEmpty(project_type)}"
-						th:text="'-'" class="textp"></th>
+					<th style="width: 225px; font-weight: normal;" class="textp">
+						<span th:if="*{#strings.isEmpty(project_type)}" class="textp">-</span> 
+						<span th:unless="*{#strings.isEmpty(project_type)}" th:text="*{project_type}" class="textp"></span>
+					</th>
+					<!-- <th style="width: 225px; font-weight: normal;"
+						th:if="*{project_type == null}" class="textp">-</th> -->
 				</tr>
 			</tbody>
 		</table>
@@ -87,11 +87,10 @@
 						th:if="*{new_glad_flg == false}" th:text="新卒"></th>
 					<th style="width: 105px; font-weight: normal;"
 						th:if="*{new_glad_flg == true}" th:text="中途"></th>
-					<th style="width: 225px; font-weight: normal;"
-						th:if="*{project_type ne null}" th:text="*{project_type}"
-						class="textp"></th>
-					<th style="width: 225px; font-weight: normal;"
-						th:if="*{project_type == null}" class="textp">-</th>
+					<th style="width: 225px; font-weight: normal;" class="textp">
+						<span th:if="*{#strings.isEmpty(project_type)}" class="textp">-</span> 
+						<span th:unless="*{#strings.isEmpty(project_type)}" th:text="*{project_type}" class="textp"></span>
+					</th>
 				</tr>
 			</tbody>
 		</table>
@@ -128,11 +127,10 @@
 						th:if="*{new_glad_flg == false}" th:text="新卒"></th>
 					<th style="width: 105px; font-weight: normal;"
 						th:if="*{new_glad_flg == true}" th:text="中途"></th>
-					<th style="width: 225px; font-weight: normal;"
-						th:if="*{project_type ne null}" th:text="*{project_type}"
-						class="textp"></th>
-					<th style="width: 225px; font-weight: normal;"
-						th:if="*{project_type == null}" class="textp">-</th>
+					<th style="width: 225px; font-weight: normal;" class="textp">
+						<span th:if="*{#strings.isEmpty(project_type)}" class="textp">-</span> 
+						<span th:unless="*{#strings.isEmpty(project_type)}" th:text="*{project_type}" class="textp"></span>
+					</th>
 				</tr>
 			</tbody>
 		</table>
