新規登録画面、更新画面におけるformボックスの表示変更の実装 引き伸ばすことが出来ないように変更

--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -21,10 +21,13 @@
 	</table> -->
 	<form method="post" action="/new/registration" th:object="${user}">
 		<div class="form-container">
+			<div th:if="${validationError != null}" th:text="${validationError}"
+				style="color: red;"></div>
+			<!-- modelセットした値がtrueならメッセージを出す 同社員コードを入力した際 -->
 
 			<div>
 				<div class="form-group">
-					社員コード(<span>※</span>): <input type="text" name="staff_code"
+					社員コード(<span style="color: red;">※</span>): <input type="text" name="staff_code"
 						class="formbox"
 						th:classappend="${#fields.hasErrors('staff_code')}?'is-invalid'">
 					<div th:if="${#fields.hasErrors('staff_code')}"
@@ -34,37 +37,42 @@
 			</div>
 
 			<div>
-				姓(<span>※</span>): <input type="text" name="last_name"
-					class="formbox" th:classappend="${#fields.hasErrors('last_name')}?'is-invalid'">
+				姓(<span style="color: red;">※</span>): <input type="text" name="last_name"
+					class="formbox"
+					th:classappend="${#fields.hasErrors('last_name')}?'is-invalid'">
 				<div th:if="${#fields.hasErrors('last_name')}"
 					th:errors="*{last_name}" style="color: red;"></div>
 
 			</div>
 
 			<div>
-				名(<span>※</span>): <input type="text" name="first_name"
-					class="formbox" th:classappend="${#fields.hasErrors('first_name')}?'is-invalid'">
+				名(<span style="color: red;">※</span>): <input type="text" name="first_name"
+					class="formbox"
+					th:classappend="${#fields.hasErrors('first_name')}?'is-invalid'">
 				<div th:if="${#fields.hasErrors('first_name')}"
 					th:errors="*{first_name}" style="color: red;"></div>
 
 				<div></div>
-				姓 ローマ字(<span>※</span>): <input type="text" name="last_name_romaji"
-					class="formbox" th:classappend="${#fields.hasErrors('last_name_romaji')}?'is-invalid'">
+				姓 ローマ字(<span style="color: red;">※</span>): <input type="text" name="last_name_romaji"
+					class="formbox"
+					th:classappend="${#fields.hasErrors('last_name_romaji')}?'is-invalid'">
 				<div th:if="${#fields.hasErrors('last_name_romaji')}"
 					th:errors="*{last_name_romaji}" style="color: red;"></div>
 			</div>
 
 			<div>
-				名 ローマ字(<span>※</span>): <input type="text" name="first_name_romaji"
-					class="formbox" th:classappend="${#fields.hasErrors('first_name_romaji')}?'is-invalid'">
+				名 ローマ字(<span style="color: red;">※</span>): <input type="text" name="first_name_romaji"
+					class="formbox"
+					th:classappend="${#fields.hasErrors('first_name_romaji')}?'is-invalid'">
 				<div th:if="${#fields.hasErrors('first_name_romaji')}"
 					th:errors="*{first_name_romaji}" style="color: red;"></div>
 			</div>
 
 			<div>
-				所属 (<span>※</span>): <select name="staff_department" size="1"
-					class="box" th:classappend="${#fields.hasErrors('staff_department')}?'is-invalid'">
-					<option value="" >3つの選択肢を表示</option>
+				所属 (<span style="color: red;">※</span>): <select name="staff_department" size="1"
+					class="box"
+					th:classappend="${#fields.hasErrors('staff_department')}?'is-invalid'">
+					<option value="">3つの選択肢を表示</option>
 					<option value="0001">エンジニア</option>
 					<option value="0002">営業</option>
 					<option value="0003">コーポレート</option>
@@ -75,22 +83,23 @@
 			</div>
 
 			<div class=radioBox>
-				経歴 (<span>※</span>): <input type="radio" name="new_glad_flg"
-					value="true" th:text="新卒" checked> <input type="radio"
-					name="new_glad_flg" value="false" th:text="中途" class=radio>
+				経歴 (<span style="color: red;">※</span>): <input type="radio"
+					name="new_glad_flg" value="true" th:text="新卒" checked> <input
+					type="radio" name="new_glad_flg" value="false" th:text="中途"
+					class=radio>
 			</div>
 
 			<div>
-				入社年月日(<span>※</span>): <input type="text" name="joined_year"
-					class="formbox" th:classappend="${#fields.hasErrors('joined_year')}?'is-invalid'">
+				入社年月日(<span style="color: red;">※</span>): <input type="text" name="joined_year"
+					class="formbox"
+					th:classappend="${#fields.hasErrors('joined_year')}?'is-invalid'">
 				<div th:if="${#fields.hasErrors('joined_year')}"
 					th:errors="*{joined_year}" style="color: red;"></div>
 			</div>
 
 			<div>
 				<label>案件概要/業務内容:</label>
-				<textarea name="project_type" cols="30" rows="5" class="formbox"
-					WRAP="hard" th:classappend="${#fields.hasErrors('project_type')}?'is-invalid'"></textarea>
+				<textarea name="project_type" cols="30" rows="5" class="formbox" WRAP="hard" th:classappend="${#fields.hasErrors('project_type')}?'is-invalid'"></textarea>
 				<div th:if="${#fields.hasErrors('project_type')}"
 					th:errors="*{project_type}" style="color: red;"></div>
 			</div>
