--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -12,9 +12,12 @@
 	<div class="subtitle">社員情報</div>
 	<form method="post" action="/update" th:object="${user}">
 		<div class="form-container">
+			<div th:if="${validationError != null}" th:text="${validationError}"
+				style="color: red;"></div>
+			<!-- modelセットした値がtrueならメッセージを出す -->
 
 			<div>
-				社員コード(<span>※</span>): <input type="text" name="staff_code"
+				社員コード(<span style="color: red;">※</span>): <input type="text" name="staff_code"
 					th:field="*{staff_code}" class="formbox"
 					th:classappend="${#fields.hasErrors('staff_code')}?'is-invalid'">
 				<input type="hidden" name="staff_code_before"
@@ -24,7 +27,7 @@
 			</div>
 
 			<div>
-				姓(<span>※</span>): <input type="text" name="last_name"
+				姓(<span style="color: red;">※</span>): <input type="text" name="last_name"
 					th:field="*{last_name}" class="formbox"
 					th:classappend="${#fields.hasErrors('last_name')}?'is-invalid'">
 				<div th:if="${#fields.hasErrors('last_name')}"
@@ -32,13 +35,13 @@
 			</div>
 
 			<div>
-				名(<span>※</span>): <input type="text" name="first_name"
+				名(<span style="color: red;">※</span>): <input type="text" name="first_name"
 					th:field="*{first_name}" class="formbox"
 					th:classappend="${#fields.hasErrors('first_name')}?'is-invalid'">
 				<div th:if="${#fields.hasErrors('first_name')}"
 					th:errors="*{first_name}" style="color: red;"></div>
 				<div></div>
-				姓 ローマ字(<span>※</span>): <input type="text" name="last_name_romaji"
+				姓 ローマ字(<span style="color: red;">※</span>): <input type="text" name="last_name_romaji"
 					th:field="*{last_name_romaji}" class="formbox"
 					th:classappend="${#fields.hasErrors('last_name_romaji')}?'is-invalid'">
 				<div th:if="${#fields.hasErrors('last_name_romaji')}"
@@ -47,7 +50,7 @@
 			</div>
 
 			<div>
-				名 ローマ字(<span>※</span>): <input type="text" name="first_name_romaji"
+				名 ローマ字(<span style="color: red;">※</span>): <input type="text" name="first_name_romaji"
 					th:field="*{first_name_romaji}" class="formbox"
 					th:classappend="${#fields.hasErrors('first_name_romaji')}?'is-invalid'">
 				<div th:if="${#fields.hasErrors('first_name_romaji')}"
@@ -55,7 +58,7 @@
 			</div>
 
 			<div>
-				所属(<span>※</span>): <select name="staff_department" size="1"
+				所属(<span style="color: red;">※</span>): <select name="staff_department" size="1"
 					th:field="*{staff_department}" class="box"
 					th:classappend="${#fields.hasErrors('staff_department')}?'is-invalid'">
 					<option value="">3つの選択肢を表示</option>
@@ -68,14 +71,14 @@
 			</div>
 
 			<div class=radioBox>
-				経歴(<span>※</span>): <input type="radio" name="new_glad_flg"
+				経歴(<span style="color: red;">※</span>): <input type="radio" name="new_glad_flg"
 					value="false" checked th:text="新卒" th:field="*{new_glad_flg}">
 				<input type="radio" name="new_glad_flg" value="true" th:text="中途"
 					class=radio th:field="*{new_glad_flg}">
 			</div>
 
 			<div>
-				入社年月日(<span>※</span>): <input type="text" name="joined_year"
+				入社年月日(<span style="color: red;">※</span>): <input type="text" name="joined_year"
 					th:field="*{joined_year}" class="formbox"
 					th:classappend="${#fields.hasErrors('joined_year')}?'is-invalid'">
 				<div th:if="${#fields.hasErrors('joined_year')}"
