--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
-<!-- Tymeleafを使用するには下記の通りURLをつける。 -->
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>結果画面</title>
+  <meta charset="UTF-8">
+  <title>結果画面</title>
 </head>
 <body>
-	<div th:text="*{id}">1</div>
-	<br />
-	<div th:text="*{name}"></div>
-	<br />
-	<h2>更新成功</h2>
-
-
-	<form method="get" action="/home">
-
-		<input type="submit" value="戻る" />
-	</form>
-
+  <div th:text="*{id}">1</div> <br />
+  <div th:text="*{name}"></div> <br />
+  <h2>更新成功</h2>
+  <form method="get" action="/home"> <input type="submit" value="戻る" /> </form>
 </body>
 </html>
